Page MenuHome GnuPG

dirmngr-client doesn't auto-launch dirmngr
Closed, ResolvedPublic

Description

if dirmngr isn't already running, then:

dirmngr-client foo.pem

fails with:

  dirmngr-client: can't connect to the dirmngr: IPC connect call failed

If i then launch dirmngr with:

  gpgconf --launch dirmngr

then dirmngr-client can find the daemon and talk to it.

This violates the 2.1 model of auto-starting the daemon when it's needed but not
present.

Details

Version
2.1.2